# itcs1

./: .dockerignore  .gitignore  README.md  README_STAGE10.txt  README_STAGE7.txt  README_STAGE8.txt  docker-compose.override.yml  fix_mark_failed.patch  l4.xlsx  requirements.txt
backend.stage16_5_backup_2026-03-11_205704/: Dockerfile  README_STAGE10_1.txt  README_STAGE11.txt  README_STAGE5_2.txt  alembic.ini  docker-compose.dev.yml  pyproject.toml  requirements.txt
backend.stage16_5_backup_2026-03-11_205704/app/: main.py.bak_stage10  main.py.bak_stage10_2  main.py.bak_stage11  services_notifications_stage13.py  ui.py.bak_stage15e  ui_dashboard.py  ui_director_landing.py.bak_stage15e  ui_tasks.py
backend.stage16_5_backup_2026-03-11_205704/app/api/: director_dashboard.py  director_landing.py  health_recompute.py  ops_task_card.py  ops_tasks_workspace.py  portal_l4_uploads.py  tasks_uploads.py
backend.stage16_5_backup_2026-03-11_205704/app/notifier/: main.py  main.py.bak.20260302_044148  templates_manager.py
backend.stage16_5_backup_2026-03-11_205704/app/services/: dashboard_service.py  l4_import.py  mobile_task_workflow_service.py
backend.stage16_5_backup_2026-03-11_205704/app/static/: admin_managers.js  director_landing.js  mobile_task_card.js  sw.js  (+1 more)
backend.stage16_5_backup_2026-03-11_205704/db_migrations.bak.2026-03-01_054903/: env.py.bak.2026-03-01_052455  env.py.bak.2026-03-01_053518
backend.stage16_5_backup_2026-03-11_205704/scripts/: patch_main_stage10.py  patch_main_stage10_2.py  patch_main_stage8.py  patch_main_stage9.py  test_upload_example.sh
(+209 files in other folders)
