[tool.poetry]
name = "itcs-backend"
version = "0.1.1"
description = "ITCS Stage 1 fixed scaffold"
authors = ["Fonix <none@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version="^0.30.6"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
SQLAlchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
python-multipart = "^0.0.12"
arq = "^0.26.2"
redis = "^5.0.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
